# sonorust

./: .gitignore  Cargo.toml  README-ja.md  README.md  deny.toml
.github/workflows/: release.yaml
crates/engtokana/: Cargo.toml
crates/engtokana/src/: lib.rs
crates/infer_api/: Cargo.toml
crates/infer_api/src/: client.rs  lib.rs  modelinfo.rs
crates/infer_api/src/sbv2_pythonclient/: client.rs  errors.rs
crates/infer_api/src/sbv2_rustclient/: client.rs  downloads.rs  errors.rs  mod.rs
crates/sbv2_api/: Cargo.toml
crates/sbv2_api/src/: client.rs  lib.rs  model_info.rs
crates/setting_inputter/: Cargo.toml
crates/setting_inputter/src/: lib.rs  settings_json.rs  token.rs
crates/setting_json/: Cargo.toml
crates/setting_json/src/: infer_python.rs  infer_rust.rs  lib.rs  setting_json.rs
crates/sonorust/: Cargo.toml
crates/sonorust/src/: errors.rs  main.rs
crates/sonorust/src/commands/: autojoin.rs  clear.rs  dict.rs  help.rs  join.rs  leave.rs  length.rs  mod.rs  model.rs  now.rs  ping.rs  read_add.rs  read_remove.rs  reload.rs  server.rs  speaker.rs  style.rs  wav.rs
crates/sonorust/src/components/: mod.rs
crates/sonorust/src/components/button/: dict_add.rs  dict_remove.rs  mod.rs  move_page.rs
crates/sonorust/src/components/select_menu/: mod.rs  model.rs  server.rs  speaker.rs  style.rs
crates/sonorust/src/crate_extensions/: infer.rs  infer_api.rs  mod.rs  rwlock.rs  sbv2_api.rs  sbv2_api_rust.rs  serenity.rs  setting_inputter.rs  sonorust_setting.rs
crates/sonorust/src/registers/: component.rs  components.rs  message.rs  mod.rs  ready.rs  slash_command.rs  slash_commands.rs  voice_state_update.rs
crates/sonorust_db/: Cargo.toml
crates/sonorust_db/src/: errors.rs  guild.rs  lib.rs  user.rs
crates/sonorust_logger/: Cargo.toml
crates/sonorust_logger/src/: lib.rs
crates/sonorust_setting/: Cargo.toml
crates/sonorust_setting/src/: ask.rs  lib.rs  setting_json.rs
lang/: bot_lang.yaml
sbv2api_models/: .gitignore
