[workspace]
members = [
    "crates/engtokana",
    "crates/infer_api",
    "crates/setting_json",
    "crates/sonorust_db",
    "crates/sonorust_logger",
]
resolver = "2"

[workspace.dependencies]
sonorust_logger = { path = "crates/sonorust_logger" }
# langrustang = { git = "https://github.com/aq2r/langrustang", tag = "v1.1.4" }
# eq_uilibrium = { git = "https://github.com/aq2r/eq-uilibrium", tag = "v0.2.0" }

anyhow = "1.0.91"
chrono = "0.4.38"
crossterm = "0.28.1"
dialoguer = "0.11.0"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.41.0", features = ["full"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.12.7", features = ["json"] }
zip = "2.2.2"
flate2 = "1.0.35"
tar = "0.4.43"
# symphonia = { version = "0.5.4", features = ["aac", "mp3", "isomp4", "alac"] }
# regex = "1.11.1"
sbv2_core = { git = "https://github.com/aq2r/sbv2_core", features = [
    "dynamic",
    "cuda",
    "cuda_tf32",
] }

serenity = { version = "0.12.4", default-features = false, features = [
    "client",
    "gateway",
    "model",
    "cache",
    "rustls_backend",
    "collector",
    "utils",
    "simd_json",
] }
songbird = { version = "0.4.6", features = ["builtin-queue"] }
