[package]
name = "infer_api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
log.workspace = true
sbv2_core = { workspace = true, optional = true }
zip.workspace = true
tar.workspace = true
flate2.workspace = true


[features]
infer-python = []
infer-rust = ["sbv2_core"]
