[package]
name = "sonorust"
edition = "2021"
publish = false

[dependencies]
sonorust_db.workspace = true
sonorust_logger.workspace = true
engtokana.workspace = true
setting_inputter.workspace = true
sbv2_api.workspace = true
langrustang.workspace = true
eq_uilibrium.workspace = true

serenity.workspace = true
symphonia.workspace = true
tokio.workspace = true
log.workspace = true
songbird.workspace = true
anyhow.workspace = true
regex.workspace = true
sbv2_core.workspace = true
reqwest.workspace = true
